--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ padding: 10px;
     display: flex;
     height: 100vh;
     width: auto;
-    background-color: #F5AF04;
+    background-color: #181100;
     border-radius: 25px;
     margin-top: 5%;
 }
