--- a/style.css
+++ b/style.css
@@ -538,6 +538,7 @@ h3 {
 
 .input-field {
     width: 50%;
+    /* color: #f8f4f4; */
     height: 55px;
     background: transparent;
     border: 2px solid #AAA;
@@ -547,6 +548,7 @@ h3 {
 }
 
 textarea {
+    color: white;
     width: 100%;
     height: 250px;
     background: transparent;
